--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <nav>
         <h1>Lena on Transit</h1>
-    </header>
+    </nav>
 
     <main>
         <section id="milestones">
