--- a/rating.html
+++ b/rating.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lena on Transit</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -38,6 +38,6 @@
         </section>
     </main>
 
-    <script src="Scripts/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
