--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <nav>
         <h1>Lena on Transit</h1>
+
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About me</a></li>
+            <li><a href="rating.html">Top 10 lists</a></li>
+        </ul>
     </nav>
 
     <main>
@@ -23,8 +29,17 @@
             <h2>Next Milestone Countdown</h2>
             <p id="countdown-timer"></p>
         </section>
+
+        <section id="donate">
+            <form action="https://www.paypal.com/donate" method="post" target="_top">
+                <input type="hidden" name="hosted_button_id" value="EACAWH8HZZJJE" />
+                <input type="image" src="https://www.paypalobjects.com/en_US/NL/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                <img alt="" border="0" src="https://www.paypal.com/en_NL/i/scr/pixel.gif" width="1" height="1" />
+                </form>
+        </section>                
     </main>
 
     <script src="script.js"></script>
 </body>
 </html>
+
