--- a/PaymentCancelled.html
+++ b/PaymentCancelled.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <h1>Lena on Transit</h1>
+        <img src="Logo.png" alt="Lena on Transit logo">
     </nav>
 
     <main>
