--- a/PaymentCancelled.html
+++ b/PaymentCancelled.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <nav>
-        <img src="Logo.png" alt="Lena on Transit logo">
+       <h1>Lena on Transit</h1> 
+
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About me</a></li>
+            <li><a href="rating.html">Top 10 lists</a></li>
+        </ul>
     </nav>
 
     <main>
