--- a/rating.html
+++ b/rating.html
@@ -36,6 +36,23 @@
                 <li>South Park: The Stick of Truth</li>
             </ol>
         </section>
+
+        <section>
+            <h3>Top 10 countries i'd like to visit</h3>
+            <p>this is subject to change</p>
+            <ol>
+                <li>Finland</li>
+                <li>Canada</li>
+                <li>Turkey (istanbul)</li>
+                <li>Albania</li>
+                <li>Japan</li>
+                <li>South-Korea</li>
+                <li>Vietnam</li>
+                <li>Taiwan</li>
+                <li>Ukraine (chernobyl)</li>
+                <li>Ireland</li>
+            </ol>
+        </section>
     </main>
 
     <script src="script.js"></script>
