--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             <p id="countdown-timer"></p>
         </section>
 
+        <section id="hug-section">
+            <h2>Send a Virtual Hug 🤗</h2>
+            <p>Hugs given: <span id="hug-count">0</span></p>
+            <button id="hug-button">Give a Hug</button>
+        </section>
+        
         <section id="donate">
             <form action="https://www.paypal.com/donate" method="post" target="_top">
                 <input type="hidden" name="hosted_button_id" value="EACAWH8HZZJJE" />
